--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -30,7 +30,7 @@
                   %a{:href => "#", :onclick => "goto('#consumer_slide', this); return false"} Get Started
             .row-fluid.employer
               .option
-                %h4 I want better candidates.
+                %h4 I want to test my candidates.
                 %p The MetaBright Evaluator validates the skills of your job candidates before you interview them.
                 %button.button
                   = link_to "Learn More", evaluator_path
