--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -20,11 +20,12 @@
 
 #employer_product.aboutcontainer 
   .aboutbox
+    .header 
+      %img{ src: GIANT_STONEY, alt: "Stoney"} 
+      %h1 Validate your Candidates' Skills
     .body 
       %div 
         .area 
-          %h1.header 
-            Validate your Candidates' Skills
           %p.be_bold 
             Never waste your time in an interview again. MetaBright's <strong>Evaluator</strong> measures and verfies the skills of your job candidates <span style="font-family: 'MuliItalic';">before</span> you interview them. Just direct your candidates to your unique MetaBright URL, and we take care of the rest.  
         .happy_customers
@@ -33,7 +34,7 @@
               %div
                 %p.speech.right "Talk about a time saver. MetaBright is a great talent screener. I never have to wonder if someone has the skills necessary to do the job."
               %div
-                .bio
+                .bio{ style: "margin-right: 19px; "}
                   %p 
                     Nisa Q.
                     %br 
