--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -34,7 +34,7 @@
               %div
                 %p.speech.right "Talk about a time saver. MetaBright is a great talent screener. I never have to wonder if someone has the skills necessary to do the job."
               %div
-                .bio{ style: "margin-right: 19px; "}
+                .bio{ style: "margin-right: 31px; margin-left: 0; "}
                   %p 
                     Nisa Q.
                     %br 
