--- a/app/views/groups/signup/form.html.haml
+++ b/app/views/groups/signup/form.html.haml
@@ -42,7 +42,7 @@
     .aboutheader
       %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
       %div{ style: "display: inline-block; vertical-align: top; margin-top: 31px;"}
-        %h1{ style: "margin-top:14px; " } MetaBright Evaluator
+        %h1 MetaBright Evaluator
     .body{ style: "padding:16px 16px 0;" }
       .reassurance
         %h2 Start Your Free 14-Day Trial
