fixing up scripts.

--- a/app/views/layouts/_styles_and_scripts.html.haml
+++ b/app/views/layouts/_styles_and_scripts.html.haml
@@ -102,33 +102,12 @@
     });
     return true;
   });
-
-- if Rails.env == "production"
-  :javascript
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-28492737-1']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-    / Google Code for Remarketing Tag
-    /*  */
-    var google_conversion_id = 1005446889;
-    var google_custom_params = window.google_tag_params;
-    var google_remarketing_only = true;
-    /*  */
-  %script{:src => "//www.googleadservices.com/pagead/conversion.js", :type => "text/javascript"}
-  %noscript
-    %div{:style => "display:inline;"}
-      %img{:alt => "", :height => "1", :src => "//googleads.g.doubleclick.net/pagead/viewthroughconversion/1005446889/?value=0&guid=ON&script=0", :style => "border-style:none;", :width => "1"}/
     
 
 / Heatmatic Heat map tool /
 - if not current_user and params[:action] == "evaluator"
   :javascript
+    //heatmatic_token = '1131478311215069';
     heatmatic_token = '1276372374249857';
     s = document.createElement("script"); s.setAttribute("type", "text/javascript")
     s.setAttribute("src", "https://s3-us-west-1.amazonaws.com/heatmatic/heatmatic.js");
