--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -171,7 +171,7 @@
         %ul.nav.pull-right
           - if show_employer_link
             %li{ style: "margin-top: 4px;"} 
-              = link_to "Employer? We can turbocharge your recruiting.", "/employers", class: "employers_link"
+              = link_to "Employer? We can turbocharge your recruiting.", "/evaluator", class: "employers_link"
           - if show_sign_in
             %li
               %a.button.btn-danger.login_link{ style: "padding:3px 7px; border-radius:2px; margin-top:6px; text-shadow:none; color:white;" } Sign in
