Upgrading to rails 4.

--- a/app/views/evaluations/challenge.html.haml
+++ b/app/views/evaluations/challenge.html.haml
@@ -29,8 +29,8 @@
 
 %div.quizcontainer{ style: "margin-top: 70px;"}
   = form_for(@task, url: took_task_url(@task), html: { id: "challenge_form", style: "margin: 0;" }) do |f|
-    = hidden_field_tag "draft_redirect_uri", continue_task_evaluation_url(@evaluation, @path, @task)
-    = hidden_field_tag "submit_redirect_uri", continue_evaluation_url(@evaluation, @path)
+    = hidden_field_tag "draft_redirect_url", continue_task_evaluation_url(@evaluation, @path, @task)
+    = hidden_field_tag "submit_redirect_url", continue_evaluation_url(@evaluation, @path)
     %div.CRquizspace
       %div.quizheader
         = image_tag @path.path_pic, alt: "#{@path.name}"
