--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -1,28 +1,28 @@
 %div.post
   - unless feed.context == :profile or feed.context == :submission
     %div.postphotospace
-      = link_to hovercard_user_path(post["username"]), class: "hovercard_link", remote: true do
-        = image_tag User.picture(post["user_image_url"]), class: "photo"
+      = link_to hovercard_user_path(post.username), class: "hovercard_link", remote: true do
+        = image_tag User.picture(post.user_image_url), class: "photo"
   %div.postspace
     %div.postheader
       - if feed.context == :submission
         %div.postphotospace
-          = link_to hovercard_user_path(post["username"]), class: "hovercard_link", remote: true do
-            = image_tag User.picture(post["user_image_url"]), class: "photo"
+          = link_to hovercard_user_path(post.username), class: "hovercard_link", remote: true do
+            = image_tag User.picture(post.user_image_url), class: "photo"
       %h3
-        = link_to truncate(post["name"], length: 50), hovercard_user_path(post["username"]), class:"username hovercard_link", remote: true
-        - if badge = User.reputation_badge(post["earned_points"])
+        = link_to truncate(post.name, length: 50), hovercard_user_path(post.username), class:"username hovercard_link", remote: true
+        - if badge = User.reputation_badge(post.earned_points)
           = image_tag (badge[0]), class: "rep_badge_post", title: badge[1], alt: badge[1]
       %span
-        = link_to truncate(post["path_name"], length: 40), challenge_path(post["path_permalink"]), class:"challengename"
+        = link_to truncate(post.path_name, length: 40), challenge_path(post.path_permalink), class:"challengename"
       %div.votingandpointsarea
         %div
           - if false
             %img.circle_check{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/circle-check.png", title: "Verified correct answer", alt: "Verified correct output"}
           - if current_user
-            %span.vote_points= post["points_awarded"]
+            %span.vote_points= post.points_awarded
             %span.vote_points{ style:"margin-right:3px;"} pts
-            - if current_user.id == post["user_id"]
+            - if current_user.id == post.user_id
               %div.dropdown.submission-icon{ style: "padding-top:0px; margin: 0px;" }
                 %a.dropdown-toggle{ "data-toggle" => "dropdown", style: "padding:0px 4px;" }
                   %span.caret{ style: "margin: 6px 0 0 0;" }
@@ -31,34 +31,34 @@
                     %div.graynub{ style: "top:-15px; left: 60px; "}
                     %div{ style: "margin: -15px -1px 5px;"}
                       %ul.profile_dropdown{ style: "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
-                        %li= link_to "Edit Submission", take_section_path(post["section_id"], task_id: post["task_id"]), style: "padding: 3px 20px 3px 12px;"
-                        %li{style: "text-align:center;"}= link_to "Delete Submission", retract_submission_path(post["id"]), remote: true, confirm: "Are you sure you want to delete your submission?", class: "retract_link", style: "padding: 3px 20px 3px 12px; margin: 0;"
+                        %li= link_to "Edit Submission", take_section_path(post.section_id, task_id: post.task_id), style: "padding: 3px 20px 3px 12px;"
+                        %li{style: "text-align:center;"}= link_to "Delete Submission", retract_submission_path(post.id), remote: true, confirm: "Are you sure you want to delete your submission?", class: "retract_link", style: "padding: 3px 20px 3px 12px; margin: 0;"
             - else
-              = link_to vote_task_path(post["task_id"], sa_id: post["submitted_answer_id"]), remote: true, class: ("btn vote_button " + (feed.votes.include?(post["submitted_answer_id"]) ? "btn-info" : "")) do
+              = link_to vote_task_path(post.task_id, sa_id: post.submitted_answer_id), remote: true, class: ("btn vote_button " + (feed.votes.include?(post.submitted_answer_id) ? "btn-info" : "")) do
                 %img.up_vote{ src: ICON_UPVOTE_URL, alt: "Up-vote" }
           - elsif feed.context == :submission
-            %span.vote_points= post["points_awarded"]
+            %span.vote_points= post.points_awarded
             %span.vote_points{ style:"margin-right:1px;"} pts
             %a.login_link.btn.vote_button
               %img.up_vote{ src: ICON_UPVOTE_URL, alt: "Up-vote" }
           - else
-            %span.vote_points= post["points_awarded"]
+            %span.vote_points= post.points_awarded
             %span.vote_points{ style:"margin-right:5px;" } pts
         - if feed.context == :submission
           = render "shared/sharing", { custom_style: "", title: "Great response in the #{@path.name} Challenge on @MetaBright" }
                 
       
-    %div.posttext.leveltext.dropdown{ style: "#{'background-color: rgb(195, 225, 247)' if post["answer_type"] == Task::CHECKIN}" }
-      %code.dropdown-toggle{ "data-toggle" => "dropdown", role: "button"} #{post["question"]}
+    %div.posttext.leveltext.dropdown{ style: "#{'background-color: rgb(195, 225, 247)' if post.answer_type == Task::CHECKIN}" }
+      %code.dropdown-toggle{ "data-toggle" => "dropdown", role: "button"} #{post.question}
     
     %div#cr_pop.CRarea
-      - if post["answer_type"] == Task::CREATIVE.to_s
+      - if post.answer_type == Task::CREATIVE
         .preview
           %div.sliderbar1
             - unless feed.context == :submission 
               %span
-                = link_to "View Full", submission_drilldown_path(post["submitted_answer_id"]), style: "color: #404040;"
-            - if post["submitted_answer_content"] && post["submitted_answer_content"].downcase.include?("<html>")
+                = link_to "View Full", submission_drilldown_path(post.submitted_answer_id), style: "color: #404040;"
+            - if post.submitted_answer_content && post.submitted_answer_content.downcase.include?("<html>")
               - unless feed.context == :submission 
                 |  
               %span.view_raw{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.preview').hide(); $(this).parents('.CRarea').find('.raw').show();" } View Raw
@@ -67,50 +67,50 @@
             - if @enable_administration
               |
               %span
-                - if post["promoted_at"].nil?
-                  = link_to "Add to Hall of Fame", admin_update_submission_path(post["submitted_answer_id"], mark: "promoted"), method: :put, style: "color: #404040;"
+                - if post.promoted_at.nil?
+                  = link_to "Add to Hall of Fame", admin_update_submission_path(post.submitted_answer_id, mark: "promoted"), method: :put, style: "color: #404040;"
                 - else
                   = link_to "In the Hall of Fame", "#"
-          - if post["submitted_answer_content"] && post["submitted_answer_content"].downcase.include?("<html>")
-            %iframe{ data: { content: post["submitted_answer_content"], src: raw_path(post["submitted_answer_id"]) }, id: "iframe_#{post["submitted_answer_id"]}", style: "min-height: 150px; width: 100%; border: 0; z-index: 1;" }
+          - if post.submitted_answer_content && post.submitted_answer_content.downcase.include?("<html>")
+            %iframe{ data: { content: post.submitted_answer_content, src: raw_path(post.submitted_answer_id) }, id: "iframe_#{post.submitted_answer_id}", style: "min-height: 150px; width: 100%; border: 0; z-index: 1;" }
           - else
-            %code.content{ style: "word-break:normal;" }= post["submitted_answer_content"]
-        - if post["answer_sub_type"] == Task::TEXT.to_s
+            %code.content{ style: "word-break:normal;" }= post.submitted_answer_content
+        - if post.answer_sub_type == Task::TEXT
           .raw.hide
             %div.sliderbar2
               %span.view_preview{ style: "color: #404040; padding-right: 5px; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.raw').hide(); $(this).parents('.CRarea').find('.preview').show();"} View Preview
-            %code.content{ style: "word-break:normal;" }= post["submitted_answer_content"]
-        - elsif post["answer_sub_type"] == Task::IMAGE.to_s
-          = image_tag(sanitize(post["image_url"]))
+            %code.content{ style: "word-break:normal;" }= post.submitted_answer_content
+        - elsif post.answer_sub_type == Task::IMAGE
+          = image_tag(sanitize(post.image_url))
       
-        - elsif post["answer_sub_type"] == Task::YOUTUBE.to_s
+        - elsif post.answer_sub_type == Task::YOUTUBE
           %center
-            %div.youtube_answer{ id: "youtube_answer_#{post["id"]}", alt: post["url"] }
+            %div.youtube_answer{ id: "youtube_answer_#{post.id}", alt: post.url }
         
-        - else raise "Unknown answer subtype"
+        - else raise "Unknown answer subtype: #{post.answer_sub_type}"
       
-      - elsif post["answer_type"] == Task::CHECKIN.to_s
+      - elsif post.answer_type == Task::CHECKIN
         %div.task_post
           %div.content
-            %code.content= post["submitted_answer_content"]
-          - if post["image_url"].blank?
+            %code.content= post.submitted_answer_content
+          - if post.image_url.blank?
             = image_tag ICON_CHECK_URL, alt: "Image placeholder", class: "preview_image", style:"height:auto; width:70px; margin-top:10px; z-index: 500;"
           - else
-            = image_tag post["image_url"], alt: "Image content", class: "preview_image", style:"height:auto; z-index: 500; #{'opacity:0.5' unless post["submitted_answer_content"].blank?}"
+            = image_tag post.image_url, alt: "Image content", class: "preview_image", style:"height:auto; z-index: 500; #{'opacity:0.5' unless post.submitted_answer_content.blank?}"
           %div.details
             %h4.title
-              - if post["title"].blank?
-                #{post["name"]} marked this task complete on #{post["created_at"].strftime('%B %d, %Y')}.
+              - if post.title.blank?
+                #{post.name} marked this task complete on #{post.created_at.strftime('%B %d, %Y')}.
               - else
-                = truncate(post["title"], length: 75)
-            - unless post["description"].blank?
-              %h5.description{ style: "margin-bottom:2px; "}= truncate(post["description"], length: 85)
-            - unless post["url"].blank?
-              %h5{ style: "margin-top:0" }= link_to truncate(post["url"], length:85), post["url"]
+                = truncate(post.title, length: 75)
+            - unless post.description.blank?
+              %h5.description{ style: "margin-bottom:2px; "}= truncate(post.description, length: 85)
+            - unless post.url.blank?
+              %h5{ style: "margin-top:0" }= link_to truncate(post.url, length:85), post.url
               
-      - else raise "Unknown answer type"    
+      - else raise "Unknown answer type: #{post.answer_type}"    
     
-    - unless post["submitted_answer_caption"].blank?
-      %div.post_caption= post["submitted_answer_caption"]
+    - unless post.submitted_answer_caption.blank?
+      %div.post_caption= post.submitted_answer_caption
     = render "comments/comments", social_details(post).merge(context: feed.context)
     
