--- a/app/views/newsfeed/_feed.html.haml
+++ b/app/views/newsfeed/_feed.html.haml
@@ -60,7 +60,7 @@
       })
 
   - feed.posts.each do |post|
-    = render "newsfeed/post", { post: post.attributes, feed: feed }
+    = render "newsfeed/post", { post: post, feed: feed }
   
   - if feed.url
     :javascript
